tests/invalid/annotation_forward_ref_string_class/main.py
class C:
    n: int

    def __init__(self, n: int) -> None:
        self.n = n


def run_case() -> None:
    bad: "C" = 1


if __name__ == "__main__":
    run_case()
